--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 flask==2.3.3
-numpy==1.24.4
-pandas==2.0.3
-opencv-python==4.9.0.80
-face_recognition==1.3.0
-joblib==1.3.2
-scikit-learn==1.3.2
-h5py==3.9.0
-gunicorn==23.0.0
+numpy==1.21.6  # Compatible with Python 3.8
+pandas==1.3.5  # Compatible with Python 3.8
+opencv-python==4.5.5.64  # Compatible with Python 3.8
+face_recognition==1.3.0  # Requires dlib, works with Python 3.8
+joblib==1.1.0  # Compatible with Python 3.8
+scikit-learn==1.0.2  # Compatible with Python 3.8
+h5py==3.1.0  # Compatible with Python 3.8
+gunicorn==20.1.0  # Compatible with Python 3.8
+cmake==3.18.4  # Compatible with Python 3.8 and dlib
+setuptools==57.5.0  # Stable version for Python 3.8
